--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.6.0",
     "@astrojs/vercel": "^7.6.0",
     "astro": "^4.7.1",
+    "posthog-node": "^4.2.0",
     "typescript": "^5.4.5"
   }
 }
